[package]
name = "sanca"
version = "1.1.0"
edition = "2021"
description = "A scanner to discover what technologies are running on a remote host. Focus on providing evidences."
readme = "README.md"
repository = "https://github.com/nalysius/sanca"
keywords = ["scanner", "cybersecurity"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
clap = { version = "4.4.9", features = ["derive"] }
reqwest = { version = "0.12.1", features = ["gzip", "rustls-tls"], default-features = false }
tokio = "1.36.0"
futures = "0.3.30"
log = "0.4.21"
simple_logger = "4.3.3"