[package]
name = "sanca_software"
version = "1.6.0"
edition = "2021"
description = "A scanner to discover what technologies are running on a remote host. Focus on providing evidences."
readme = "README.md"
keywords = ["scanner", "cybersecurity"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "gzip", "json", "rustls-tls"], default-features = false }
tokio = "1.38.0"
futures = "0.3.30"
log = "0.4.22"
simple_logger = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"