[package]
name = "sanca_software"
version = "1.6.1"
edition = "2021"
description = "A scanner to discover what technologies are running on a remote host. Focus on providing evidences."
readme = "README.md"
keywords = ["scanner", "cybersecurity"]
categories = ["command-line-utilities"]
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "gzip", "json", "rustls-tls"], default-features = false }
tokio = "1.42.0"
futures = "0.3.31"
log = "0.4.22"
simple_logger = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"